WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264531
hideContentUntilPendingUpdate callbacks can be processed too late after the transaction and cause flickering
https://bugs.webkit.org/show_bug.cgi?id=264531
Summary
hideContentUntilPendingUpdate callbacks can be processed too late after the t...
Matt Woodrow
Reported
2023-11-09 15:42:53 PST
<
rdar://118083889
> The callbacks for DispatchAfterEnsuringDrawing get processed at the end of the transaction, after we've already told the client that we've committed the transaction. In some cases, this can cause them to be included as a separate CA commit, and cause flickering.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-11-09 15:46:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20268
EWS
Comment 2
2023-11-13 14:34:59 PST
Committed
270672@main
(923ed5177ec0): <
https://commits.webkit.org/270672@main
> Reviewed commits have been landed. Closing PR #20268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug