Cherry-pick 270672@main (923ed5177ec0). rdar://118083889

hideContentUntilPendingUpdate callbacks can be processed too late after the transaction and cause flickering.
    https://bugs.webkit.org/show_bug.cgi?id=264531
    <rdar://118083889>

    Reviewed by Tim Horton.

    The callbacks for DispatchAfterEnsuringDrawing get processed at the end of the transaction, after we've already told
    the client that we've committed the transaction. In some cases, this can cause them to be included as a separate CA
    commit, and cause flickering.

    This adds a pre-transaction check for a callback for hideContentUntilPendingUpdate, and clears the reply id, so that we
    re-attach the root layer as part of the main commit.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
    (WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTreeTransaction):
    (WebKit::RemoteLayerTreeDrawingAreaProxy::hideContentUntilPendingUpdate):

    Canonical link: https://commits.webkit.org/270672@main

Canonical link: https://commits.webkit.org/267815.568@safari-7617.1.17.10-branch